--- a/Teacher3/pages/index/index.wxml
+++ b/Teacher3/pages/index/index.wxml
@@ -26,7 +26,7 @@
             </view>
         </view>
         <view class='company-reduce'>
-            <image class='reduce-head' src='http://img.my-shop.cc/teacher/tc3_reduce_title.png' mode='widthFix'></image>
+            <image class='reduce-head' src='http://img.my-shop.cc/teacher/tc3_reduce_title.png?1' mode='widthFix'></image>
             <view class='reduce-txt'>
                 中国平安保险（集团）股份有限公司（以下简称“中国平安” ）于1988年诞生于深圳蛇口，是中国第一家股份制保险企业，至今已经发展成为金融保险、银行投资等金融业务为一体的整合紧密、多元的综合金融服务集团。2017年6月，《2017BrandZ最具价值全球品牌100强》公布中国平安排名第61位；7月31日，《财富》中国500强排行榜发布，中国平安保险（集团）股份有限公司排名第五。 2017年9月，中国平安保险（集团）股份有限公司在2017中国企业500强中，排名第八。
             </view>
