--- a/Tmenu/pages/menu/menu.wxml
+++ b/Tmenu/pages/menu/menu.wxml
@@ -81,9 +81,9 @@
                     </view>
                     <view class="food-detail-num-box" wx:if="{{item.attrs.length>0?false:true}}">
                         <view class="food-detail-num">
-                            <view data-id="{{item.id}}" class="count-img minus-img" style="visibility:{{item.num>0?'visible':'hidden'}}" bindtap="minus"></view>
+                            <view data-id="{{item.id}}" class="count-img minus-img" style="visibility:{{item.num>0?'visible':'hidden'}}" catchtap="minus"></view>
                             <view class="food-detail-number" style="visibility:{{item.num>0?'visible':'hidden'}}">{{item.num}}</view>
-                            <view data-obj="{{item}}" class="count-img plus-img" bindtap="plus"></view>
+                            <view data-obj="{{item}}" class="count-img plus-img" catchtap="plus"></view>
                         </view>
                     </view>
                     <view class='spec-btn' wx:if="{{item.attrs.length>0?true:false}}" data-obj="{{item}}" catchtap="showSpec">
@@ -127,11 +127,11 @@
                     <view class="detail-price">￥ {{item.price}}</view>
                     <view class="detail-num-box">
                         <view class="detail-num">
-                            <view class="minus-num" data-curr_spec='{{item.attrs.titles?item.attrs:null}}' data-curr_obj='{{item}}' data-id="{{item.id}}" bindtap="minus">
+                            <view class="minus-num" data-curr_spec='{{item.attrs.titles?item.attrs:null}}' data-curr_obj='{{item}}' data-id="{{item.id}}" catchtap="minus">
                                 <view class="x-y-center-minus"></view>
                             </view>
                             <view class="detail-number">{{item.num}}</view>
-                            <view class="plus-num" data-curr_spec='{{item.attrs.titles?item.attrs:null}}' data-curr_obj='{{item}}' data-obj="{{item}}" bindtap="plus">
+                            <view class="plus-num" data-curr_spec='{{item.attrs.titles?item.attrs:null}}' data-curr_obj='{{item}}' data-obj="{{item}}" catchtap="plus">
                                 <view class="x-y-center-plus"></view>
                             </view>
                         </view>
