--- a/Teacher3/pages/index/index.wxss
+++ b/Teacher3/pages/index/index.wxss
@@ -70,13 +70,12 @@ button::after {
 }
 
 .join-us {
-    padding: 30rpx 55rpx;
+    padding: 30rpx 35rpx;
 }
 
 .join-title {
     display: flex;
     justify-content: center;
-    margin-bottom: 25rpx;
 }
 
 .join-img {
@@ -262,8 +261,7 @@ swiper {
 }
 
 .slide-image {
-    width: 678rpx;
-    height: 360rpx;
+    width: 680rpx;
 }
 
 .person-des-box {
@@ -330,7 +328,9 @@ swiper {
 .story-box {
     position: relative;
     display: flex;
-    margin-top: 8rpx;
+    margin: 0 auto;
+    margin-top: 38rpx;
+    width: 660rpx;
 }
 
 .story-des-box {
@@ -339,7 +339,7 @@ swiper {
     left: 0;
     display: flex;
     justify-content: space-between;
-    width: 640rpx;
+    width: 660rpx;
 }
 
 .story-txt {
@@ -373,4 +373,8 @@ swiper {
 video {
     width: 680rpx;
     height: 360rpx;
+}
+
+.person-xy{
+    font-size: 38rpx;
 }
